--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
+    "redis": "^5.10.0",
     "stripe": "^18.3.0"
   }
 }
